/***************************************************************
 * Project:       Pacman
 * File:          Event_Collector.h
 *
 * Author:        Sukhovii Daniil
 * Created:       2025-12-20
 * Modified:      []
 *
 * Description:   []
 *
 * Contact:
 *   Email:       sukhovii.daniil@gmail.com
 *
 * Disclaimer:
 *   This file is part of Pacman.
 *   Unauthorized use, reproduction, or distribution is prohibited.
***************************************************************/
#ifndef PACMAN_AST_EVENT_COLLECTOR_H
#define PACMAN_AST_EVENT_COLLECTOR_H
#include "Node.h"

namespace infra::ast {
    class Event_Collector : Application_Node {

    };
}
#endif //PACMAN_AST_EVENT_COLLECTOR_H